Add section hero

--- a/index.html
+++ b/index.html
@@ -44,5 +44,20 @@
             <button class="menu-item menu-mobile">Menu mobile</button>
         </div>
     </header>
+
+    <section class="s-hero">
+        <div class="container">
+            <div class="text">
+                <h1>
+                    Front-end descomplicado e direto ao ponto!
+                </h1>
+                <p>Aprenda a desenvolver interfaces modernas e de alta qualidade com quem está na área atuando com projetos altamente renomados.</p>
+                <a href="" class="btn-primary">Fazer parte da lista de espera</a>
+            </div>
+            <div class="image">
+                <img src="./assets/img-hero.svg" alt="Imagem hero">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
