--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <a class="logo" href="./">
-                <img src="./assets/logo.svg" alt="">
+                <img src="./assets/logo.svg" alt="Logo do site">
             </a>
 
             <nav>
