add section card-featured main

--- a/index.html
+++ b/index.html
@@ -59,5 +59,54 @@
             </div>
         </div>
     </section>
+
+    <section class="s-card-featured">
+        <div class="container">
+            <div class="main-area">
+                <div class="title-section center">
+                    <h2>Título</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <div class="icon">
+                            <img src="./assets/icon-circle.svg" alt="Icone card">
+                        </div>
+                        <div class="card-text">
+                            <h3>Título</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card white">
+                        <div class="icon">
+                            <img src="./assets/icon-circle.svg" alt="Icone card">
+                        </div>
+                        <div class="card-text">
+                            <h3>Título</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="icon">
+                            <img src="./assets/icon-circle.svg" alt="Icone card">
+                        </div>
+                        <div class="card-text">
+                            <h3>Título</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <p>TESTE</p>
 </body>
 </html>
