--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="s-card-featured">
         <div class="container">
             <div class="main-area">
-                <div class="title-section center">
+                <div class="title-section">
                     <h2>Título</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -102,6 +102,54 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus.
                             </p>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="second-area">
+                <div class="top">
+                    <div class="title-text">
+                        <h2>Título</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <a href="" class="btn-primary">Call to action</a>
+                </div>
+                <div class="images">
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/thumb.svg" alt="Imagens thumb">
                     </div>
                 </div>
             </div>
