add footer + estilização

--- a/index.html
+++ b/index.html
@@ -163,5 +163,69 @@
             <a href="" class="btn-primary">Fazer parte da lista de espera</a>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="main-footer">
+                <div class="area-left">
+                    <img src="./assets/logo-footer.svg" alt="Logo do footer">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra.</p>
+                </div>
+
+                <nav>
+                    <div class="item-nav">
+                        <h4>Lista de páginas</h4>
+                        <ul>
+                            <li><a href="">Text link 01</a></li>
+                            <li><a href="">Text link 02</a></li>
+                            <li><a href="">Text link 03</a></li>
+                            <li><a href="">Text link 04</a></li>
+                        </ul>
+                    </div>
+                    <div class="item-nav">
+                        <h4>Soluções</h4>
+                        <ul>
+                            <li><a href="">Text link 01</a></li>
+                            <li><a href="">Text link 02</a></li>
+                        </ul>
+                    </div>
+                    <div class="item-nav">
+                        <h4>Nossas redes sociais</h4>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    <img src="./assets/instagram.svg" alt="Logo Instagram">
+                                    <span>Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./assets/linkedin.svg" alt="Logo Linkedin">
+                                    <span>Linkedin</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./assets/youtube.svg" alt="Logo Youtube">
+                                    <span>Youtube</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+            <div class="copy">
+                <p>2021 © Todos os direitos reservados. <strong>Codeboost</strong></p>
+                
+                <div class="group">
+                    <a href="">
+                        <span>Grupo</span>
+                        <img src="./assets/boost.svg" alt="Logo Boost">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
