Add responsividade no footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="container">
             <div class="main-footer">
                 <div class="area-left">
-                    <img src="./assets/logo-footer.svg" alt="Logo do footer">
+                    <a href="./"><img src="./assets/logo-footer.svg" alt="Logo do footer"></a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra.</p>
                 </div>
 
@@ -216,7 +216,7 @@
             </div>
 
             <div class="copy">
-                <p>2021 © Todos os direitos reservados. <strong>Codeboost</strong></p>
+                <p>2023 © Todos os direitos reservados. <strong>Codeboost</strong></p>
                 
                 <div class="group">
                     <a href="">
